# pipecat-poc

./: .env  background_audio_mixer.py  bot.py  call_analyzer.py  docs.txt  main.py  pyproject.toml  todo.md
transcripts/: call_CA15d8507c3cfaed243bb669b5f3f0343b_20250617_123223.txt  call_CA63df1a918066642fcc275150fe73f35d_20250702_211444.txt  call_CA85124d41fdc229870a19da581a02a61f_20250702_133019.txt
